Fix contrasts

--- a/assets/styles/themes/_theme-neutraali-overrides.scss
+++ b/assets/styles/themes/_theme-neutraali-overrides.scss
@@ -28,9 +28,17 @@ $pill-background-active-focus: bulmaDarken($primary, 2.5%);
 
         &:hover,
         &:focus {
-            color: $white !important;
+            color: $black !important;
             background-color: $primary !important;
             outline-color: $black;
+        }
+    }
+}
+
+.duet-date {
+    &__toggle {
+        &:focus {
+            outline: .0558rem solid $black !important;
         }
     }
 }
